[project]
name = "mcp-kvn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kevin Putrajaya", email = "freakperzon@yahoo.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.9.4",
    "toml",
    "pypdf",
    "requests"
]

[project.scripts]
mcp-kvn = "mcp_kvn:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
