[project]
name = "mcp-kvn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kevin Putrajaya", email = "freakperzon@yahoo.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp",
    "toml",
    "pypdf",
    "requests"
]

[project.scripts]
mcp-kvn = "mcp_kvn.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_kvn"]
